--- a/accelerator.yaml
+++ b/accelerator.yaml
@@ -8,6 +8,16 @@ accelerator:
   - "etl"
   - "postgres"
   options:
+    - name: postgres
+      inputType: radio
+      display: true
+      choices:
+        - text: 'Postgres (Data Sources / Data Preprocessing)'
+          value: selected
+      defaultValue: selected
+      dependsOn:
+        name: mlPlatformType
+        value: datasource
     - name: mlPlatformType
       inputType: radio
       display: true
