Added values file for ytt

--- a/accelerator.yaml
+++ b/accelerator.yaml
@@ -79,7 +79,7 @@ engine:
     - type: Chain
       transformations:
         - type: Include
-          patterns: [ 'resources/values-overrides.yaml' ]
+          patterns: [ 'resources/**' ]
         - type: ReplaceText
           substitutions:
             - text: REPLACE_AUTH_USERNAME
