Added accelerator versioning

--- a/accelerator.yaml
+++ b/accelerator.yaml
@@ -71,7 +71,7 @@ engine:
     - type: Chain
       transformations:
         - type: Include
-          patterns: [ 'resources/**.yaml' ]
+          patterns: [ 'resources/**/*.yaml' ]
         - type: ReplaceText
           substitutions:
             - text: REPLACE_AUTH_USERNAME
