--- a/postgres-gitops-sync.yaml
+++ b/postgres-gitops-sync.yaml
@@ -9,7 +9,7 @@ spec:
   sourceRef:
     kind: GitRepository
     name: mlops-flux-system
-  path: ./clusters/mlops/postgres-accelerator/bitnami-postgres/16.2.0
+  path: ./bitnami-postgres/16.2.0
   prune: true
   wait: true
   timeout: 10m0s
