--- a/accelerator.yaml
+++ b/accelerator.yaml
@@ -72,6 +72,8 @@ engine:
       transformations:
         - type: Include
           patterns: [ '**/**.yaml' ]
+        - type: Exclude
+          patterns: [ 'catalog-info.yaml' ]
         - type: ReplaceText
           substitutions:
             - text: REPLACE_AUTH_USERNAME
